# CS495-Mapping-Best-Empirical-Models

./: .gitignore  AUTHORS.md  CITATION.cff  LICENSE  Makefile  PLAN.md  README.md  _tmp_s3e8.txt  pyproject.toml
.claude/: settings.local.json
analysis/controls/: DISCOVERY_LOG.md  PILOT_RESULTS.md  PROTOCOL_PHASE1.md
analysis/pass3-fe-taxonomy/: AUDIT.md  PILOT.md  README.md  ROBUSTNESS_CHECKS.md  SCHEMA.md  STAGE1_FULL.md  STAGE1_RESULTS.md  STAGE2_AGGREGATES.md  STAGE2_LOG.md  _apply_adjudication.py  _make_blind_sample.py  blind_v2.csv  (+11 more)
data/: extracted_fields.csv  kaggle_candidates_v2.xlsx  kaggle_meta_analysis.xlsx  solution_summary.csv
journal/: phase4_blockers_report.md  session_log.md
notebooks/: 01_eda.ipynb  02_reanalysis.ipynb
research/: _list_words.py  generate_wordcloud.py
scripts/: _add_dominant_base_model.py  _add_entry.py  _add_winner_cols.py  _apply_fixes.py  _audit_candidates.py  _audit_contradictions.py  _audit_data.py  _backfill_audit.py  _check_completeness.py  _check_rank_alignment.py  _debug_leaderboard.py  _deep_audit.py  _delete_entry.py  _fill_metric.py  _fix_rank.py  _inspect_metric_api.py  _inspect_nb.py  _list_refs.py  _lookup_candidate.py  _map_urls.py  _normalize_cosmetic.py  _normalize_fields.py  _patch_entry.py  _populate_writeup_urls.py  _pull_notebook.py  _read_row.py  _scan_notebook.py  _test_download.py  _tmp_cand_headers.py  _tmp_check_icr.py  _tmp_check_raw.py  _tmp_check_s3e8.py  _tmp_crosscheck.py  _tmp_dump.py  _tmp_headers.py  _tmp_lookup.py  _tmp_patch_stats.py  _tmp_read4.py  _tmp_robustness.py  _tmp_s2_discover.py  (+24 more)
(+360 files in other folders)
