[tool.poetry]
name = "cs495-mapping-best-empirical-models"
version = "0.1.0"
description = "Mapping Best Empirical Models"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
