[tool.poetry]
name = "cs495-mapping-best-empirical-models"
version = "0.1.0"
description = "Mapping Best Empirical Models"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
kaggle = "^1.6"
pandas = "^2.2"
numpy = "^2.0"
openpyxl = "^3.1"
requests = "^2.32"
beautifulsoup4 = "^4.12"
scikit-learn = "^1.5"
xgboost = "^2.1"
lightgbm = "^4.5"
catboost = "^1.2"
matplotlib = "^3.9"
seaborn = "^0.13"
jupyter = "^1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"
pytest = "^8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
